--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,7 +1,10 @@
 name: Continuous Integration
 
 on:
-  pull_request:
+  push:
+    tags:
+      - "v*"
+  workflow_dispatch:
 
 permissions:
   id-token: write
